--- a/src/ebot_docking/CMakeLists.txt
+++ b/src/ebot_docking/CMakeLists.txt
@@ -55,6 +55,8 @@ install(
 
 install(PROGRAMS
 	scripts/ebot_docking_boilerplate.py
+  scripts/h_nav.py
+  scripts/h_dock.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
